--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -159,25 +159,25 @@ on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
     enter = 'mode main'
     esc = 'mode main'
 
-# [[on-window-detected]]
-# if.app-id = 'com.microsoft.Outlook'
-# run = 'move-node-to-workspace E'
-#
-# [[on-window-detected]]
-# if.app-id = 'com.microsoft.teams2'
-# run = 'move-node-to-workspace T'
-#
-# [[on-window-detected]]
-# if.app-id = 'md.obsidian'
-# run = 'move-node-to-workspace O'
-#
-# [[on-window-detected]]
-# if.app-id = 'com.tinyspeck.slackmacgap'
-# run = 'move-node-to-workspace S'
-#
-# [[on-window-detected]]
-# if.app-id = 'org.ferdium.ferdium-app'
-# run = 'move-node-to-workspace S'
+[[on-window-detected]]
+if.app-id = 'com.microsoft.Outlook'
+run = 'move-node-to-workspace 6'
+
+[[on-window-detected]]
+if.app-id = 'com.microsoft.teams2'
+run = 'move-node-to-workspace 5'
+
+[[on-window-detected]]
+if.app-id = 'md.obsidian'
+run = 'move-node-to-workspace 4'
+
+[[on-window-detected]]
+if.app-id = 'com.tinyspeck.slackmacgap'
+run = 'move-node-to-workspace 3'
+
+[[on-window-detected]]
+if.app-id = 'org.ferdium.ferdium-app'
+run = 'move-node-to-workspace 3'
 
 [[on-window-detected]]
 if.app-id = 'org.alacritty'
